// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should render with many props assigned 1`] = `
<div
  className="test-class -left-0"
>
  <div
    className="h-full w-full"
  >
    Test
  </div>
</div>
`;

exports[`Drawer should render with required props 1`] = `
<div
  className="-left-[100%]"
>
  <div
    className="h-full w-full"
  >
    Test
  </div>
</div>
`;
